--- a/public/app/templates/home.tmpl.html
+++ b/public/app/templates/home.tmpl.html
@@ -2,43 +2,34 @@
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-        <form action="action_page.php">
-            Product:<br>
-            <input type="text" name="product" value="">
-            <br>
-            Country:<br>
-            <input type="text" name="lastname" value="">
-            <br>
-            Amazon URL:<br>
-            <input type="Amazon URL" name="URL" value="">
-            <br><br>
-            <input type="submit" value="Submit">
-        </form>
 
-        <form role="form">
+        <form role="form" method="post" action="add_to_wishlist.html">
             <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email">
+                <label for="product">Product:</label>
+                <input type="text" name="product" class="form-control" id="product">
             </div>
             <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
+                <label for="location">Location:</label>
+                <input type="text" name="location" class="form-control" id="location">
             </div>
             <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
+                <label><input type="checkbox">needs meches?</label>
+            </div>
+            <div>
+                <input type="hidden" name="fb_id" class="form-control" id="fb_id" value="123456">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
 
 
-        <button onclick="logout_of_fb()">LOG OUT</button>
 
         <br/><br/><br/><br/>
 
 
+
         <h2 align="center">My Wishlist!</h2>
 
-        <table class="table table-striped">
+        <table class="table table-striped" data-bind="with: res_view_model">
             <thead>
             <tr>
                 <th>Product</th>
@@ -52,6 +43,12 @@
             </tr>
             </tbody>
         </table>
+
+            <button onclick="logout_of_fb()">LOG OUT</button>
             </div>
     </div>
+
+    <br/><br/><br/>
+
+
 </div>
