--- a/public/app/templates/home.tmpl.html
+++ b/public/app/templates/home.tmpl.html
@@ -29,14 +29,14 @@
 
         <h2 align="center">My Wishlist!</h2>
 
-        <table class="table table-striped" data-bind="with: res_view_model">
+        <table class="table table-striped" data-bind="with: wishListModel">
             <thead>
             <tr>
                 <th>Product</th>
                 <th>Location</th>
             </tr>
             </thead>
-            <tbody data-bind="foreach: wish_list_items">
+            <tbody data-bind="foreach: WishListDataArray">
             <tr>
                 <td data-bind="text: product"></td>
                 <td data-bind="text: location"></td>
