--- a/public/app/templates/home.tmpl.html
+++ b/public/app/templates/home.tmpl.html
@@ -1,11 +1,19 @@
 <div id="home-page">
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"></div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
+        <div id="page">
+    <div id="header">
+    	<div class="title">Friend Shipping</div>
+        <div class="subText">Get what you want, from wherever you want</div>
+    </div>
+
+    <div id="pageContent">
+        <div class="articleTitle">Submit new item</div>
+
+        <div class="articleContent">
         <form role="form" method="post" action="add_to_wishlist.html">
             <div class="form-group">
-                <label for="product">Product:</label>
+                <label for="product">Product: </label>
                 <input type="text" name="product" class="form-control" id="product">
             </div>
             <div class="form-group">
@@ -20,31 +28,33 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
-
-
-
-        <br/><br/><br/><br/>
-
-
-
-        <h2 align="center">My Wishlist!</h2>
-
-        <table class="table table-striped" data-bind="with: wishListModel">
-            <thead>
-            <tr>
-                <th>Product</th>
-                <th>Location</th>
-            </tr>
-            </thead>
-            <tbody data-bind="foreach: WishListDataArray">
-            <tr>
-                <td data-bind="text: product"></td>
-                <td data-bind="text: location"></td>
-            </tr>
-            </tbody>
-        </table>
+            <br/><br/><br/><br/>
+            <h2>My Wishlist:</h2>
+            <div class="CSSTableGenerator">
+                <table class="table" data-bind="with: wishListModel">
+                    <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Location</th>
+                    </tr>
+                    </thead>
+                    <tbody data-bind="foreach: WishListDataArray">
+                    <tr>
+                        <td data-bind="text: product"></td>
+                        <td data-bind="text: location"></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div/>
 
             <button onclick="logout_of_fb()">LOG OUT</button>
+        </div>
+    </div>
+
+
+
+
+
             </div>
     </div>
 
