--- a/public/app/templates/home.tmpl.html
+++ b/public/app/templates/home.tmpl.html
@@ -29,7 +29,7 @@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
             <br/><br/><br/><br/>
-            <h2>My Wishlist:</h2>
+            <h3>My Wishlist:</h3>
             <div class="CSSTableGenerator">
                 <table class="table" data-bind="with: wishListModel">
                     <thead>
@@ -47,7 +47,7 @@
                 </table>
                 <div/>
 
-            <button onclick="logout_of_fb()">LOG OUT</button>
+            <button onclick="logout_of_fb()" width="3">LOG OUT</button>
         </div>
     </div>
 
