--- a/public/app/templates/home.tmpl.html
+++ b/public/app/templates/home.tmpl.html
@@ -28,7 +28,7 @@
             <div>
                 <input type="hidden" name="fb_id" class="form-control" id="fb_id" value="123456">
             </div>
-            <button data-bind="click: addWishItem" type="submit" class="btn btn-default">Submit</button>
+            <button data-bind="click: addWishItem" type="submit" class="btn btn-default" style="width: 100px;">Submit</button>
         </form>
             <br/><br/><br/><br/>
             <h3>My Wishlist:</h3>
@@ -49,7 +49,7 @@
                 </table>
                 <div/>
 
-            <button onclick="logout_of_fb()" width="3">LOG OUT</button>
+            <button class="text-center" onclick="logout_of_fb()" style="width: 150px;">LOG OUT</button>
         </div>
     </div>
 
