--- a/public/app/templates/login.tmpl.html
+++ b/public/app/templates/login.tmpl.html
@@ -8,7 +8,7 @@
 
                 <h3>The world is just a click away!</h3>
 
-                <form action="login">
+                <form>
                     <fb:login-button
                             scope="public_profile,email,user_about_me,user_friends,user_tagged_places,user_location,user_posts"
                             onlogin="checkLoginState();">
