--- a/public/app/templates/login.tmpl.html
+++ b/public/app/templates/login.tmpl.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-0"></div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="ribbon"></div>
+            <div style="margin-top: 70px;"></div>
             <div class="login text-center" style="width: 230px;">
                 <h1>Friend Shipping</h1>
 
